--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 * {
@@ -12,7 +12,7 @@ body {
 
 html, body {
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 /* Enhanced Animations */
 @keyframes float-1 {
