--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* Ensure the body or a container has overflow-y set to auto */
+body {
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
 
 body::-webkit-scrollbar {
   display: none;
